--- a/docs/references.bib
+++ b/docs/references.bib
@@ -53,3 +53,112 @@
   year      = {2008},
   publisher = {O'Reilly Media}
 }
+
+@article{ryan_cns_2016,
+	title = {The {CNS} connectome of a tadpole larva of {Ciona} intestinalis ({L}.) highlights sidedness in the brain of a chordate sibling},
+	volume = {5},
+	issn = {2050-084X},
+	url = {https://doi.org/10.7554/eLife.16962},
+	doi = {10.7554/eLife.16962},
+	abstract = {Left-right asymmetries in brains are usually minor or cryptic. We report brain asymmetries in the tiny, dorsal tubular nervous system of the ascidian tadpole larva, Ciona intestinalis. Chordate in body plan and development, the larva provides an outstanding example of brain asymmetry. Although early neural development is well studied, detailed cellular organization of the swimming larva’s CNS remains unreported. Using serial-section EM we document the synaptic connectome of the larva’s 177 CNS neurons. These formed 6618 synapses including 1772 neuromuscular junctions, augmented by 1206 gap junctions. Neurons are unipolar with at most a single dendrite, and few synapses. Some synapses are unpolarised, others form reciprocal or serial motifs; 922 were polyadic. Axo-axonal synapses predominate. Most neurons have ciliary organelles, and many features lack structural specialization. Despite equal cell numbers on both sides, neuron identities and pathways differ left/right. Brain vesicle asymmetries include a right ocellus and left coronet cells.},
+	urldate = {2021-05-06},
+	journal = {eLife},
+	author = {Ryan, Kerrianne and Lu, Zhiyuan and Meinertzhagen, Ian A},
+	editor = {Marder, Eve},
+	month = dec,
+	year = {2016},
+	note = {Publisher: eLife Sciences Publications, Ltd},
+	keywords = {CNS, connectome, network, synapse},
+	pages = {e16962},
+	file = {Full Text PDF:/Users/pauladkisson/Zotero/storage/BZBESH4D/Ryan et al. - 2016 - The CNS connectome of a tadpole larva of Ciona int.pdf:application/pdf}
+}
+
+@article{zheng_complete_2018,
+	title = {A {Complete} {Electron} {Microscopy} {Volume} of the {Brain} of {Adult} {Drosophila} melanogaster},
+	volume = {174},
+	issn = {0092-8674, 1097-4172},
+	url = {https://www.cell.com/cell/abstract/S0092-8674(18)30787-6},
+	doi = {10.1016/j.cell.2018.06.019},
+	language = {English},
+	number = {3},
+	urldate = {2021-05-06},
+	journal = {Cell},
+	author = {Zheng, Zhihao and Lauritzen, J. Scott and Perlman, Eric and Robinson, Camenzind G. and Nichols, Matthew and Milkie, Daniel and Torrens, Omar and Price, John and Fisher, Corey B. and Sharifi, Nadiya and Calle-Schuler, Steven A. and Kmecova, Lucia and Ali, Iqbal J. and Karsh, Bill and Trautman, Eric T. and Bogovic, John A. and Hanslovsky, Philipp and Jefferis, Gregory S. X. E. and Kazhdan, Michael and Khairy, Khaled and Saalfeld, Stephan and Fetter, Richard D. and Bock, Davi D.},
+	month = jul,
+	year = {2018},
+	pmid = {30033368},
+	note = {Publisher: Elsevier},
+	keywords = {connectomics, Drosophila melanogaster, electron microscopy, image stitching, mushroom body, neural circuits, olfaction},
+	pages = {730--743.e22},
+	file = {Full Text PDF:/Users/pauladkisson/Zotero/storage/W3M2QTRV/Zheng et al. - 2018 - A Complete Electron Microscopy Volume of the Brain.pdf:application/pdf;Snapshot:/Users/pauladkisson/Zotero/storage/CA6BPPDA/S0092-8674(18)30787-6.html:text/html}
+}
+
+@article{witvliet_connectomes_2020,
+	title = {Connectomes across development reveal principles of brain maturation in {C}. elegans},
+	copyright = {© 2020, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution 4.0 International), CC BY 4.0, as described at http://creativecommons.org/licenses/by/4.0/},
+	url = {https://www.biorxiv.org/content/10.1101/2020.04.30.066209v1},
+	doi = {10.1101/2020.04.30.066209},
+	abstract = {{\textless}h3{\textgreater}Abstract{\textless}/h3{\textgreater} {\textless}p{\textgreater}From birth to adulthood, an animal’s nervous system changes as its body grows and its behaviours mature. However, the extent of circuit remodeling across the connectome is poorly understood. Here, we used serial-section electron microscopy to reconstruct the brain of eight isogenic \textit{C. elegans} individuals at different ages to learn how an entire wiring diagram changes with maturation. We found that the overall shape of the nervous system is preserved from birth to adulthood, establishing a constant scaffold upon which synaptic change is built. We observed substantial connectivity differences among individuals that make each brain partly unique. We also observed developmental synaptic changes that are consistent between animals but different among neurons, altering the strengths of existing connections and creating additional connections. Collective synaptic changes alter information processing of the brain. Across maturation, the decision-making circuitry is maintained whereas sensory and motor pathways are substantially remodelled, and the brain becomes progressively more modular and feedforward. These synaptic changes reveal principles by which maturation shapes brain and behavior across development.{\textless}/p{\textgreater}},
+	language = {en},
+	urldate = {2021-05-06},
+	journal = {bioRxiv},
+	author = {Witvliet, Daniel and Mulcahy, Ben and Mitchell, James K. and Meirovitch, Yaron and Berger, Daniel R. and Wu, Yuelong and Liu, Yufang and Koh, Wan Xian and Parvathala, Rajeev and Holmyard, Douglas and Schalek, Richard L. and Shavit, Nir and Chisholm, Andrew D. and Lichtman, Jeff W. and Samuel, Aravinthan D. T. and Zhen, Mei},
+	month = apr,
+	year = {2020},
+	note = {Publisher: Cold Spring Harbor Laboratory
+Section: New Results},
+	pages = {2020.04.30.066209},
+	file = {Snapshot:/Users/pauladkisson/Zotero/storage/6MQT5CLP/2020.04.30.html:text/html;Full Text PDF:/Users/pauladkisson/Zotero/storage/GN5MKMZJ/Witvliet et al. - 2020 - Connectomes across development reveal principles o.pdf:application/pdf}
+}
+
+@article{xu_connectome_2020,
+	title = {A {Connectome} of the {Adult} {Drosophila} {Central} {Brain}},
+	copyright = {© 2020, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NoDerivs 4.0 International), CC BY-ND 4.0, as described at http://creativecommons.org/licenses/by-nd/4.0/},
+	url = {https://www.biorxiv.org/content/10.1101/2020.01.21.911859v1},
+	doi = {10.1101/2020.01.21.911859},
+	abstract = {{\textless}h3{\textgreater}Abstract{\textless}/h3{\textgreater} {\textless}p{\textgreater}The neural circuits responsible for behavior remain largely unknown. Previous efforts have reconstructed the complete circuits of small animals, with hundreds of neurons, and selected circuits for larger animals. Here we (the FlyEM project at Janelia and collaborators at Google) summarize new methods and present the complete circuitry of a large fraction of the brain of a much more complex animal, the fruit fly \textit{Drosophila melanogaster}. Improved methods include new procedures to prepare, image, align, segment, find synapses, and proofread such large data sets; new methods that define cell types based on connectivity in addition to morphology; and new methods to simplify access to a large and evolving data set. From the resulting data we derive a better definition of computational compartments and their connections; an exhaustive atlas of cell examples and types, many of them novel; detailed circuits for most of the central brain; and exploration of the statistics and structure of different brain compartments, and the brain as a whole. We make the data public, with a web site and resources specifically designed to make it easy to explore, for all levels of expertise from the expert to the merely curious. The public availability of these data, and the simplified means to access it, dramatically reduces the effort needed to answer typical circuit questions, such as the identity of upstream and downstream neural partners, the circuitry of brain regions, and to link the neurons defined by our analysis with genetic reagents that can be used to study their functions.{\textless}/p{\textgreater}{\textless}p{\textgreater}Note: In the next few weeks, we will release a series of papers with more involved discussions. One paper will detail the hemibrain reconstruction with more extensive analysis and interpretation made possible by this dense connectome. Another paper will explore the central complex, a brain region involved in navigation, motor control, and sleep. A final paper will present insights from the mushroom body, a center of multimodal associative learning in the fly brain.{\textless}/p{\textgreater}},
+	language = {en},
+	urldate = {2021-05-06},
+	journal = {bioRxiv},
+	author = {Xu, C. Shan and Januszewski, Michal and Lu, Zhiyuan and Takemura, Shin-ya and Hayworth, Kenneth J. and Huang, Gary and Shinomiya, Kazunori and Maitin-Shepard, Jeremy and Ackerman, David and Berg, Stuart and Blakely, Tim and Bogovic, John and Clements, Jody and Dolafi, Tom and Hubbard, Philip and Kainmueller, Dagmar and Katz, William and Kawase, Takashi and Khairy, Khaled A. and Leavitt, Laramie and Li, Peter H. and Lindsey, Larry and Neubarth, Nicole and Olbris, Donald J. and Otsuna, Hideo and Troutman, Eric T. and Umayam, Lowell and Zhao, Ting and Ito, Masayoshi and Goldammer, Jens and Wolff, Tanya and Svirskas, Robert and Schlegel, Philipp and Neace, Erika R. and Knecht, Christopher J. and Alvarado, Chelsea X. and Bailey, Dennis A. and Ballinger, Samantha and Borycz, Jolanta A. and Canino, Brandon S. and Cheatham, Natasha and Cook, Michael and Dreher, Marisa and Duclos, Octave and Eubanks, Bryon and Fairbanks, Kelli and Finley, Samantha and Forknall, Nora and Francis, Audrey and Hopkins, Gary Patrick and Joyce, Emily M. and Kim, SungJin and Kirk, Nicole A. and Kovalyak, Julie and Lauchie, Shirley A. and Lohff, Alanna and Maldonado, Charli and Manley, Emily A. and McLin, Sari and Mooney, Caroline and Ndama, Miatta and Ogundeyi, Omotara and Okeoma, Nneoma and Ordish, Christopher and Padilla, Nicholas and Patrick, Christopher and Paterson, Tyler and Phillips, Elliott E. and Phillips, Emily M. and Rampally, Neha and Ribeiro, Caitlin and Robertson, Madelaine K. and Rymer, Jon Thomson and Ryan, Sean M. and Sammons, Megan and Scott, Anne K. and Scott, Ashley L. and Shinomiya, Aya and Smith, Claire and Smith, Kelsey and Smith, Natalie L. and Sobeski, Margaret A. and Suleiman, Alia and Swift, Jackie and Takemura, Satoko and Talebi, Iris and Tarnogorska, Dorota and Tenshaw, Emily and Tokhi, Temour and Walsh, John J. and Yang, Tansy and Horne, Jane Anne and Li, Feng and Parekh, Ruchi and Rivlin, Patricia K. and Jayaraman, Vivek and Ito, Kei and Saalfeld, Stephan and George, Reed and Meinertzhagen, Ian and Rubin, Gerald M. and Hess, Harald F. and Scheffer, Louis K. and Jain, Viren and Plaza, Stephen M.},
+	month = jan,
+	year = {2020},
+	note = {Publisher: Cold Spring Harbor Laboratory
+Section: New Results},
+	pages = {2020.01.21.911859},
+	file = {Snapshot:/Users/pauladkisson/Zotero/storage/GG6WGAFJ/2020.01.21.html:text/html;Full Text PDF:/Users/pauladkisson/Zotero/storage/EGUG6HUC/Xu et al. - 2020 - A Connectome of the Adult Drosophila Central Brain.pdf:application/pdf}
+}
+
+@article{cook_whole-animal_2019,
+	title = {Whole-animal connectomes of both {Caenorhabditis} elegans sexes},
+	volume = {571},
+	copyright = {2019 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-019-1352-7},
+	doi = {10.1038/s41586-019-1352-7},
+	abstract = {Knowledge of connectivity in the nervous system is essential to understanding its function. Here we describe connectomes for both adult sexes of the nematode Caenorhabditis elegans, an important model organism for neuroscience research. We present quantitative connectivity matrices that encompass all connections from sensory input to end-organ output across the entire animal, information that is necessary to model behaviour. Serial electron microscopy reconstructions that are based on the analysis of both new and previously published electron micrographs update previous results and include data on the male head. The nervous system differs between sexes at multiple levels. Several sex-shared neurons that function in circuits for sexual behaviour are sexually dimorphic in structure and connectivity. Inputs from sex-specific circuitry to central circuitry reveal points at which sexual and non-sexual pathways converge. In sex-shared central pathways, a substantial number of connections differ in strength between the sexes. Quantitative connectomes that include all connections serve as the basis for understanding how complex, adaptive behavior is generated.},
+	language = {en},
+	number = {7763},
+	urldate = {2021-05-06},
+	journal = {Nature},
+	author = {Cook, Steven J. and Jarrell, Travis A. and Brittin, Christopher A. and Wang, Yi and Bloniarz, Adam E. and Yakovlev, Maksim A. and Nguyen, Ken C. Q. and Tang, Leo T.-H. and Bayer, Emily A. and Duerr, Janet S. and Bülow, Hannes E. and Hobert, Oliver and Hall, David H. and Emmons, Scott W.},
+	month = jul,
+	year = {2019},
+	note = {Number: 7763
+Publisher: Nature Publishing Group},
+	pages = {63--71},
+	file = {Full Text PDF:/Users/pauladkisson/Zotero/storage/S4H9VNUL/Cook et al. - 2019 - Whole-animal connectomes of both Caenorhabditis el.pdf:application/pdf;Snapshot:/Users/pauladkisson/Zotero/storage/97S2MYFR/s41586-019-1352-7.html:text/html}
+}
+
+@article{dos_and_donts,
+	title = {Statistical Connectomics},
+	url = {https://osf.io/ek4n3},
+	doi = {10.31219/osf.io/ek4n3},
+	abstract = {The data science of networks is a rapidly developing field with myriad applications. In neuroscience, the brain is commonly modeled as a connectome, a network of nodes connected by edges. While there have been thousands of papers on connectomics, the statistics of networks remains limited and poorly understood. Here, we provide an overview from the perspective of statistical network science of the kinds of models, assumptions, problems, and applications that are theoretically and empirically justified for analysis of connectome data. We hope this review spurs further development and application of statistically grounded methods in connectomics.},
+	language = {en},
+	urldate = {2021-05-06},
+	journal = {OSF Preprints},
+	author = {Jaewon Chung, Eric Bridgeford, Jesús Arroyo, Benjamin D. Pedigo, Ali Saad-Eldin, VivekGopalakrishnan, Liang Xiang, Carey E. Priebe, and Joshua Vogelstein.},
+	month = aug,
+	year = {2020},
+}
