Update code for neuPrint data

--- a/Neuprint/DiGraph-neuPrint.ipynb
+++ b/Neuprint/DiGraph-neuPrint.ipynb
@@ -346,7 +346,58 @@
    "source": [
     "from graph import GraphIO\n",
     "\n",
-    "GraphIO.dump(G_Neuprint, './neuPrint/neuPrint_updated_05032021.json')"
+    "GraphIO.dump(G_Neuprint, './neuPrint/neuPrint_graphs.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G_neuP, _, _, _ = GraphIO.load('./neuPrint/neuPrint_graphs.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.digraph.DiGraph at 0x2b29e2a0408>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_neuP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sex': 'Female',\n",
+       " 'Synapse Type': 'Chemical',\n",
+       " 'Title': 'This neuPrint data is based on the FlyEM hemibrain dataset v1.2. The source data is abtained from the semibrain sample of sigle felmale fly. It produces a connectome consisting of reconstructed neuron morphologies and the chemical synapses between them. For more information, please check on the source website(https://www.janelia.org/project-team/flyem/hemibrain). In this file, we set unique bodyId as different nodes. For more information about the attributes in this file, please see the instruction file or check Graph Attributes on wiki.'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G_neuP.graph"
    ]
   }
  ],
