fix a few typos

--- a/docs/apriori_sbms.ipynb
+++ b/docs/apriori_sbms.ipynb
@@ -20,7 +20,7 @@
     }
    },
    "source": [
-    "It is often desirable to create models of data so we can generate new samples, learn something about the data' structure,\n",
+    "It is often desirable to create models of data so we can generate new samples, learn something about the data's structure,\n",
     "or for use in some larger analysis. SBM models define different connection probabilities for different communities in\n",
     "a graph.\n",
     "\n",
@@ -29,13 +29,13 @@
     "divided by the total number of possible connections between them.\n",
     "\n",
     "We fit these SBMs using different attributes or combinations of attributes from the connectome, and then compute the\n",
-    "BIC (Bayesian Information Criterion) for each model. This gives us na idea of which attributes best explain the topological\n",
+    "BIC (Bayesian Information Criterion) for each model. This gives us an idea of which attributes best explain the topological\n",
     "structure of the connectome.\n",
     "\n",
     "For consistency, we use the attributes `hemisphere` (the side of the brain a neuron is on), `cell_type` (the high-level\n",
     "classification of a neuron as interneuron, sensory, or motor) and their combination as groups for fitting. The analysis\n",
     "is only preformed on the Ciona Intestinalis Connectome, two C. Elegans Worm Wiring Connectomes, and the 8 C. Elegans\n",
-    "Developmental Connectomes, because only these have both these attributes defined.\n",
+    "Developmental Connectomes, because only these have both those attributes defined.\n",
     "\n",
     "*Note that the code to do the actual SBM fitting is located in `analysis/apriori_sbm_code.py`*"
    ]
@@ -154,8 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesting, it appears annotation has the best BIC but the worst liklihood. This is\n",
-    "probably because annotation has much fewer parameters than the other groupings. (For Ciona\n",
+    "It appears annotation has the best BIC but the worst liklihood. This could be because annotation has much fewer parameters than the other groupings. (For Ciona\n",
     "'Side' is broken into 11 groupings instead of just 'Left' and 'Right'). Therefore, based on\n",
     "the BIC, annotation explains the structure better, and the other groupings are likely\n",
     "fitting noise."
