--- a/docs/connectome_overview.ipynb
+++ b/docs/connectome_overview.ipynb
@@ -208,7 +208,7 @@
     }
    },
    "source": [
-    "## C. Elegans: Connectomes Over Development##\n",
+    "## C. Elegans: Connectomes Over Development ##\n",
     "\n",
     "This dataset seeks to elucidate how connectomes change over development. Eight different EM connectomes were constructed\n",
     "from C. Elegans Hermaphrodites at evenly spaced time intervals from birth until adulthood.\n",
@@ -306,7 +306,7 @@
    "outputs": [],
    "source": [
     "for i in range(len(layouts)):\n",
-    "    print('C. Elegans, Stage ' + str(i))\n",
+    "    print('C. Elegans, Stage ' + str(i + 1))\n",
     "    gr.layouts.show_graph(undirected_cleaned[i].to_undirected(), layouts[i], color_maps[i],\n",
     "                          vertex_shape='.',\n",
     "                          vertex_alpha=1.,\n",
@@ -352,14 +352,14 @@
     "    data['Max In Degree'].append(max(connectome.in_degree, key=lambda x: x[1])[1])\n",
     "\n",
     "df = pd.DataFrame.from_dict(data)\n",
-    "df.index = ['Witvilet #0',\n",
-    "            'Witvilet #1',\n",
-    "            'Witvilet #2',\n",
-    "            'Witvilet #3',\n",
-    "            'Witvilet #4',\n",
-    "            'Witvilet #5',\n",
-    "            'Witvilet #6',\n",
-    "            'Witvilet #7',]\n",
+    "df.index = ['C. Elegans: stage 1',\n",
+    "            'C. Elegans: stage 2',\n",
+    "            'C. Elegans: stage 3',\n",
+    "            'C. Elegans: stage 4',\n",
+    "            'C. Elegans: stage 5',\n",
+    "            'C. Elegans: stage 6',\n",
+    "            'C. Elegans: stage 7',\n",
+    "            'C. Elegans: stage 8',]\n",
     "df.head(8)"
    ]
   },
