Review problems fixed

--- a/docs/Modularity.ipynb
+++ b/docs/Modularity.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load graphs"
+    "Load graphs."
    ]
   },
   {
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change the graph nodes which are in type int to type str"
+    "Change the graph nodes which are in type int to type str."
    ]
   },
   {
@@ -253,6 +253,20 @@
     "mod = np.array(mod)\n",
     "graph_origin = np.array(graph_origin)\n",
     "synapse_type = np.array(synapse_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above here, we plot out the true value of the modularity of ciona. For the code I have now, it returns the value as nan. For the consistance of plotting, I set the value of mulularity in ciona as 0 for now."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below here, there are all the modularities for each of the graphs:"
    ]
   },
   {
