--- a/docs/apriori_sbms.ipynb
+++ b/docs/apriori_sbms.ipynb
@@ -56,7 +56,9 @@
     "sys.path.append(\"../\")\n",
     "import pandas as pd\n",
     "from graph import GraphIO\n",
-    "from analysis.apriori_sbm_code import fit_apriori_sbm"
+    "from analysis.apriori_sbm_code import fit_apriori_sbm\n",
+    "import seaborn as sns\n",
+    "import numpy as np"
    ]
   },
   {
@@ -139,22 +141,29 @@
    },
    "outputs": [],
    "source": [
+    "colors = sns.color_palette(\"deep\")[0]\n",
     "fig, ax = plt.subplots(2, 1)\n",
     "out_index = ciona_results.index.levels[0]\n",
     "for i, key in enumerate(out_index):\n",
     "    data = ciona_results.loc[key]\n",
-    "    ax[0].scatter(data['bic'].index, data['bic'], label=key)\n",
-    "    ax[1].scatter(data['liklihood'].index, data['liklihood'], label=key)\n",
+    "    ax[0].scatter(data['bic'].index,\n",
+    "                  data['bic'],\n",
+    "                  label=key,\n",
+    "                  c=np.array(colors))\n",
+    "    ax[1].scatter(data['likelihood'].index,\n",
+    "                  data['likelihood'],\n",
+    "                  label=key,\n",
+    "                  c=np.array(colors))\n",
     "    ax[0].set(xlabel='Group', ylabel='-BIC')\n",
     "    ax[1].set(xlabel='Group', ylabel='Likelihood')\n",
-    "fig.suptitle('BIC and Likelihood: Witvilet at Different Developmental Stages')"
+    "_ = fig.suptitle('BIC and Likelihood: Ciona Intestinalis')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears annotation has the best BIC but the worst liklihood. This could be because annotation has much fewer parameters than the other groupings. (For Ciona\n",
+    "It appears annotation has the best BIC but the worst likelihood. This could be because annotation has much fewer parameters than the other groupings. (For Ciona\n",
     "'Side' is broken into 11 groupings instead of just 'Left' and 'Right'). Therefore, based on\n",
     "the BIC, annotation explains the structure better, and the other groupings are likely\n",
     "fitting noise."
@@ -247,15 +256,21 @@
    "source": [
     "fig, ax = plt.subplots(8, 2)\n",
     "out_index = wit_results.index.levels[0]\n",
-    "colors = ['red', 'blue', 'green', 'orange', 'purple', 'grey', 'cyan', 'pink']\n",
+    "colors = sns.color_palette(\"bright\")[2]\n",
     "for i, key in enumerate(out_index):\n",
     "    data = wit_results.loc[key]\n",
-    "    ax[i, 0].scatter(data['bic'].index, data['bic'], label=key, color=colors[i])\n",
-    "    ax[i, 1].scatter(data['liklihood'].index, data['liklihood'], label=key, color=colors[i])\n",
+    "    ax[i, 0].scatter(data['bic'].index,\n",
+    "                     data['bic'],\n",
+    "                     label=key,\n",
+    "                     color=np.array(colors))\n",
+    "    ax[i, 1].scatter(data['likelihood'].index,\n",
+    "                     data['likelihood'],\n",
+    "                     label=key,\n",
+    "                     color=np.array(colors))\n",
     "    ax[i, 0].set(xlabel='Groups, stage ' + str(i), ylabel='-BIC')\n",
     "    ax[i, 1].set(xlabel='Groups, stage ' + str(i), ylabel='Likelihood')\n",
     "plt.ylabel('-BIC \\t Likelihood')\n",
-    "fig.suptitle('BIC and Likelihood: C. Elegans at Different Developmental Stages')\n",
+    "_ = fig.suptitle('BIC and Likelihood: C. Elegans at Different Developmental Stages')\n",
     "fig.set_size_inches(16, 32)"
    ]
   },
@@ -340,15 +355,21 @@
    "source": [
     "fig, ax = plt.subplots(2, 2)\n",
     "out_index = ww_results.index.levels[0]\n",
-    "colors = ['red', 'blue']\n",
+    "colors = sns.color_palette(\"dark\")[2]\n",
     "for i, key in enumerate(out_index):\n",
     "    data = ww_results.loc[key]\n",
-    "    ax[i, 0].scatter(data['bic'].index, data['bic'], label=key, color=colors[i])\n",
-    "    ax[i, 1].scatter(data['liklihood'].index, data['liklihood'], label=key, color=colors[i])\n",
+    "    ax[i, 0].scatter(data['bic'].index,\n",
+    "                     data['bic'],\n",
+    "                     label=key,\n",
+    "                     color=np.array(colors))\n",
+    "    ax[i, 1].scatter(data['likelihood'].index,\n",
+    "                     data['likelihood'],\n",
+    "                     label=key,\n",
+    "                     color=np.array(colors))\n",
     "    ax[i, 0].set(xlabel='Groups, ' + types[i], ylabel='-BIC')\n",
     "    ax[i, 1].set(xlabel='Groups, ' + types[i], ylabel='Likelihood')\n",
     "plt.ylabel('-BIC \\t Likelihood')\n",
-    "fig.suptitle('BIC and Likelihood: Worm Wiring C. Elegans Hermaphrodite and Male')\n",
+    "_ = fig.suptitle('BIC and Likelihood: Worm Wiring C. Elegans Hermaphrodite and Male')\n",
     "fig.set_size_inches(16, 8)"
    ]
   },
