--- a/docs/connectome_overview.ipynb
+++ b/docs/connectome_overview.ipynb
@@ -17,7 +17,7 @@
     }
    },
    "source": [
-    "This notebooks provides an overview of the 14 connectomes available in the connectocross repository, along with visualizations of each one and some basic statistics"
+    "This notebook provides an overview of the 14 connectomes available in the connectocross repository, along with visualizations of each one and some basic statistics"
    ]
   },
   {
@@ -29,21 +29,11 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "sys.path.append(\"../\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "coordinate-wireless",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "sys.path.append(\"../\")\n",
     "import graspologic as gr\n",
     "import networkx as nx\n",
-    "from graph import GraphIO"
+    "from graph import GraphIO\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -53,9 +43,9 @@
    "source": [
     "## Ciona Intestinalis Larval Connectome ##\n",
     "\n",
-    "A very detailed connectome create via careful EM imaging of a the ascidian tadpole larva. Multiple hermaphroditic individuals were imaged. The original study was looking for topological asymetries between hemispheres in Ciona's CNS. The connectome includes mostly CNS Neurons. \n",
+    "This is a very detailed connectome of the ascidian tadpole larva create via careful EM imaging. Multiple hermaphroditic individuals were imaged. The original study was looking for topological asymmetries between hemispheres in Ciona's central nervous system (CNS). The connectome includes mostly CNS Neurons.\n",
     "\n",
-    "_Ryan, K., Lu, Z., & Meinertzhagen, I. A. (2016). The CNS connectome of a tadpole larva of Ciona intestinalis (L.) highlights sidedness in the brain of a chordate sibling. ELife, 5. doi:10.7554/elife.16962_"
+    "{cite}`ryan_cns_2016`"
    ]
   },
   {
@@ -94,7 +84,9 @@
    "outputs": [],
    "source": [
     "undirected_connectome = nx.convert_node_labels_to_integers(connectome.to_undirected())\n",
-    "undirected_connectome, layout = gr.layouts.layout_tsne(undirected_connectome, perplexity=20, n_iter=1000000)"
+    "undirected_connectome, layout = gr.layouts.layout_tsne(undirected_connectome,\n",
+    "                                                       perplexity=20,\n",
+    "                                                       n_iter=1000000)"
    ]
   },
   {
@@ -155,7 +147,9 @@
    },
    "outputs": [],
    "source": [
-    "gr.layouts.show_graph(undirected_connectome, layout, color_map, vertex_shape='.', vertex_alpha=1., edge_alpha=.2, edge_line_width=2.)"
+    "gr.layouts.show_graph(undirected_connectome, layout, color_map,\n",
+    "                      vertex_shape='.', vertex_alpha=1.,\n",
+    "                      edge_alpha=.2, edge_line_width=2.)"
    ]
   },
   {
@@ -186,7 +180,6 @@
     "        'Density': [],\n",
     "        'Max Out Degree': [],\n",
     "        'Max In Degree': []}\n",
-    "import pandas as pd\n",
     "num_nodes = len(connectome.nodes)\n",
     "data['Number of Nodes'].append(num_nodes)\n",
     "num_edges = len(connectome.edges)\n",
@@ -213,8 +206,7 @@
     "This dataset seeks to elucidate how connectomes change over development. Eight different EM connectomes were constructed\n",
     "from C. Elegans Hermaphrodites at evenly spaced time intervals from birth until adulthood.\n",
     "\n",
-    "_Witvliet, D., Mulcahy, B., Mitchell, J. K., Meirovitch, Y., Berger, D. R., Wu, Y., . . . Zhen, M. (2020). Connectomes across development reveal principles of brain maturation in C. elegans. BioRxiv Preprint. doi:10.1101/2020.04.30.066209_\n",
-    "\n",
+    "{cite}`witvliet_connectomes_2020`\n",
     "\n",
     "When loading the connectomes below, we must flatten the multigraphs. This is because chemical and electrical synapses are included, so some nodes\n",
     "may have two pairs of edges between them. Here we rectify this by summing weights of multiedges (the default mode for `GraphIO.flatten_multigraph`)"
@@ -265,7 +257,8 @@
     "layouts = [None]*len(connectomes)\n",
     "undirected_cleaned = [None]*len(connectomes)\n",
     "for i, connectome in enumerate(connectomes):\n",
-    "    undirected_cleaned[i], layouts[i] = gr.layouts.layout_tsne(nx.convert_node_labels_to_integers(connectome.to_undirected()),\n",
+    "    temp_g = nx.convert_node_labels_to_integers(connectome.to_undirected())\n",
+    "    undirected_cleaned[i], layouts[i] = gr.layouts.layout_tsne(temp_g,\n",
     "                                                               perplexity=20,\n",
     "                                                               n_iter=10000000)\n"
    ]
@@ -308,10 +301,8 @@
     "for i in range(len(layouts)):\n",
     "    print('C. Elegans, Stage ' + str(i + 1))\n",
     "    gr.layouts.show_graph(undirected_cleaned[i].to_undirected(), layouts[i], color_maps[i],\n",
-    "                          vertex_shape='.',\n",
-    "                          vertex_alpha=1.,\n",
-    "                          edge_alpha=.2,\n",
-    "                          edge_line_width=2.,)"
+    "                          vertex_shape='.', vertex_alpha=1.,\n",
+    "                          edge_alpha=.2, edge_line_width=2.,)"
    ]
   },
   {
@@ -377,7 +368,7 @@
     "This dataset contains full, detailed, connectomes for both C. Elegans sexes. Data for chemical and electrical synapses is contained in this repository,\n",
     "but here we look more deeply at the chemical connectome.\n",
     "\n",
-    "_Cook, S. J., Jarrell, T. A., Brittin, C. A., Wang, Y., Bloniarz, A. E., Yakovlev, M. A., . . . Emmons, S. W. (2019). Whole-animal connectomes of both Caenorhabditis elegans sexes. Nature, 571(7763), 63-71. doi:10.1038/s41586-019-1352-7_\n",
+    "{cite}`cook_whole-animal_2019`\n",
     "\n",
     "Again, visualization and analysis is done as before."
    ]
@@ -416,7 +407,8 @@
     "layouts = [None]*len(connectomes)\n",
     "undirected_cleaned = [None]*len(connectomes)\n",
     "for i, connectome in enumerate(connectomes):\n",
-    "    undirected_cleaned[i], layouts[i] = gr.layouts.layout_tsne(nx.convert_node_labels_to_integers(connectome.to_undirected()),\n",
+    "    temp_g = nx.convert_node_labels_to_integers(connectome.to_undirected())\n",
+    "    undirected_cleaned[i], layouts[i] = gr.layouts.layout_tsne(temp_g,\n",
     "                                                               perplexity=20,\n",
     "                                                               n_iter=10000000)"
    ]
@@ -461,7 +453,10 @@
     "labels = ['Hermaphrodite Connectome', 'Male Connectome']\n",
     "for i in range(len(layouts)):\n",
     "    print(labels[i])\n",
-    "    gr.layouts.show_graph(undirected_cleaned[i].to_undirected(), layouts[i], color_maps[i], vertex_shape='.', vertex_alpha=1., edge_alpha=.2, edge_line_width=2.)\n"
+    "    gr.layouts.show_graph(undirected_cleaned[i].to_undirected(),\n",
+    "                          layouts[i], color_maps[i],\n",
+    "                          vertex_shape='.', vertex_alpha=1.,\n",
+    "                          edge_alpha=.2, edge_line_width=2.)\n"
    ]
   },
   {
@@ -522,7 +517,7 @@
     "Using new High Throughput Electron Micrography data, this dataset contains a subset of the whole Fly Brain Connectome, namely the mushroom body. This dataset is much smaller than the others, because it focuses\n",
     "on a specific neural circuit.\n",
     "\n",
-    "_Bates, A., Schlegel, P., Roberts, R., Drummond, N., Tamimi, I., Turnbull, R., . . . Jefferis, G. (2020). Complete connectomic reconstruction of olfactory projection neurons in the fly brain. Current Biology. doi:10.1101/2020.01.19.911453_\n"
+    "{cite}`zheng_complete_2018`\n"
    ]
   },
   {
@@ -553,7 +548,8 @@
    },
    "outputs": [],
    "source": [
-    "undirected_cleaned, layout = gr.layouts.layout_tsne(connectome.to_undirected(), perplexity=20, n_iter=1000)"
+    "undirected_cleaned, layout = gr.layouts.layout_tsne(connectome.to_undirected(),\n",
+    "                                                    perplexity=20, n_iter=1000)"
    ]
   },
   {
@@ -593,7 +589,9 @@
    },
    "outputs": [],
    "source": [
-    "gr.layouts.show_graph(undirected_cleaned, layout, color_map, vertex_shape='.', vertex_alpha=1., edge_alpha=.2, edge_line_width=2.)"
+    "gr.layouts.show_graph(undirected_cleaned, layout, color_map,\n",
+    "                      vertex_shape='.', vertex_alpha=1.,\n",
+    "                      edge_alpha=.2, edge_line_width=2.)"
    ]
   },
   {
@@ -643,7 +641,7 @@
     "Largest synaptic level connectome ever recorded, includes large portion of a fly's CNS. Imaged using a combination of EM and\n",
     "light microscopy.\n",
     "\n",
-    "_Scheffer, Louis K., et al. “A Connectome and Analysis of the Adult Drosophila Central Brain.” ELife, vol. 9, Sept. 2020, p. e57443. DOI.org (Crossref), doi:10.7554/eLife.57443._\n",
+    "{cite}`xu_connectome_2020`\n",
     "\n",
     "This connectome is much larger than the others, so some steps will take longer to run."
    ]
