Fix the grammar problems

--- a/docs/Modularity.ipynb
+++ b/docs/Modularity.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change the graph nodes which are in type int to type str."
+    "Change the graph nodes which are type int to type str."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "source": [
     "def nodes_to_string(G):\n",
     "    '''\n",
-    "    Given a netwrokx graph, convert the nodes into str type.\n",
+    "    Given a networkx graph, convert the nodes into type str.\n",
     "    '''\n",
     "    str_nodes = []\n",
     "    for i in G.nodes:\n",
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change the directed graphs into undirected by reform the graph with newly weighted edges. The new weight is define as the average weight between two nodes."
+    "Change the directed graphs into undirected by recreating the graph with newly weighted edges. The new weight is defined as the average weight between two nodes."
    ]
   },
   {
@@ -144,7 +144,7 @@
    "source": [
     "def modulate_graphs(G):\n",
     "    '''\n",
-    "    Given the networkx graph, return the modularity of each graph.\n",
+    "    Given the networkx graph, returns the modularity of each graph.\n",
     "    '''\n",
     "    if type(G) is nx.MultiDiGraph:\n",
     "        G = G.to_undirected()\n",
@@ -259,14 +259,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above here, we plot out the true value of the modularity of ciona. For the code I have now, it returns the value as nan. For the consistance of plotting, I set the value of mulularity in ciona as 0 for now."
+    "Above here, we plot out the true value of the modularity of ciona. For the code I have now, it returns the value as nan. For the consistance of plotting, I set the value of modularity in ciona as 0 for now."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below here, there are all the modularities for each of the graphs:"
+    "Below are the modularity values for each graph:"
    ]
   },
   {
