--- a/docs/references.bib
+++ b/docs/references.bib
@@ -151,3 +151,15 @@ Publisher: Nature Publishing Group},
 	file = {Full Text PDF:/Users/pauladkisson/Zotero/storage/S4H9VNUL/Cook et al. - 2019 - Whole-animal connectomes of both Caenorhabditis el.pdf:application/pdf;Snapshot:/Users/pauladkisson/Zotero/storage/97S2MYFR/s41586-019-1352-7.html:text/html}
 }
 
+@article{dos_and_donts,
+	title = {Statistical Connectomics},
+	url = {https://osf.io/ek4n3},
+	doi = {10.31219/osf.io/ek4n3},
+	abstract = {The data science of networks is a rapidly developing field with myriad applications. In neuroscience, the brain is commonly modeled as a connectome, a network of nodes connected by edges. While there have been thousands of papers on connectomics, the statistics of networks remains limited and poorly understood. Here, we provide an overview from the perspective of statistical network science of the kinds of models, assumptions, problems, and applications that are theoretically and empirically justified for analysis of connectome data. We hope this review spurs further development and application of statistically grounded methods in connectomics.},
+	language = {en},
+	urldate = {2021-05-06},
+	journal = {OSF Preprints},
+	author = {Jaewon Chung, Eric Bridgeford, Jesús Arroyo, Benjamin D. Pedigo, Ali Saad-Eldin, VivekGopalakrishnan, Liang Xiang, Carey E. Priebe, and Joshua Vogelstein.},
+	month = aug,
+	year = {2020},
+}
